Fixed overflow scroll

--- a/v/3/4/5/bclick.css
+++ b/v/3/4/5/bclick.css
@@ -15,6 +15,7 @@ body, html {
     word-wrap: break-word;
     font-size:  90%;
     font-family: 'Roboto Mono', monospace;
+    overflow: auto;
 }
 
 main {
